[ADD] home page structure

--- a/src/ui/view/html/home.html
+++ b/src/ui/view/html/home.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST</title>
+    <base href="../">
+    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="style/home.css">
 </head>
 <body>
-    hello world!
+    <header id="WelcomeChat">
+        <div>
+            <h3 id="HeaderText">OculusIcon</h3>
+        </div>
+    </header>
+    <main>
+        <article class="articleHub">
+            <div class="listContainer">
+                <h2 class="textHeader">Quick Access Your Projects:</h2>
+                <ul >
+                    <li class="refLink itemClickable">Projeto Dummy</li>
+                    <li class="refLink itemClickable">Projeto Dummy SoQ Grande Muito Mesmo hahahahahahahahahahahahahahahahah</li>
+                    <li class="refLink itemClickable">Pequenino</li>
+                    <li class="refLink itemClickable">Projeto Dummy</li>
+                    <li class="refLink itemClickable">Projeto Dummy</li>
+                    <li class="refLink itemClickable">Projeto Dummy SoQ Grande Muito Mesmo hahahahahahahahahahahahahahahahah</li>
+                    <li class="refLink itemClickable">Pequenino</li> 
+                    <li class="refLink itemClickable">Projeto Dummy</li>
+                </ul>
+            </div>
+            <div  class="listContainer">
+                <h2 class="textHeader">AI Frameworks</h2>
+                <ul>
+                    <li class="refLink itemClickable">Import From Pytorch (.pth)</li>
+                    <li class="refLink itemClickable">Import From Tensorflow (.h5)</li>
+                    <li class="refLink itemClickable">Import From Onnx</li>
+                </ul>
+            </div>
+            <div  class="listContainer">
+                <h2 class="textHeader">Quick Tools</h2>
+                <ul>
+                    <li class="refLink itemClickable">Convert from Pascal to Uni</li>
+                    <li class="refLink itemClickable">Convert from MScoco to Uni</li>
+                    <li class="refLink itemClickable">Convert from Yolo to Uni</li>
+                    <li class="refLink itemClickable">Export to Pascal</li>
+                    <li class="refLink itemClickable">Export to MScoco</li>
+                    <li class="refLink itemClickable">Export to Yolo</li>
+                </ul>
+            </div>
+        </article>
+    </main>
 </body>
 </html>
