[Changes] Design changes into home screen

--- a/src/ui/view/html/home.html
+++ b/src/ui/view/html/home.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header id="WelcomeChat">
-        <div>
-            <h3 id="HeaderText">OculusIcon</h3>
-        </div>
+        <div id="IconHeader"><img id="IconHeaderImg" src="./icons/oculusIcon.svg" alt=""></div>
     </header>
     <main>
         <article class="articleHub">
