--- a/src/ui/view/style/home.css
+++ b/src/ui/view/style/home.css
@@ -1,9 +1,10 @@
 header {
     max-width: 100%;
-    margin: 5px 0 0;
     max-height: 2rem;
-    /*background-color: #000000a6;*/ 
-    border-bottom: 0.75px rgba(255, 0, 0, 0.226) solid;
+    background-color: #0c0c0ca6;
+    padding-top: 5px;
+    padding-bottom: 3px;
+    border-bottom: 0.75px rgb(251 251 251 / 23%) solid;
 }
 
 #HeaderText {
@@ -41,9 +42,18 @@ main {
   margin-bottom: 1rem; 
 }
 
+.itemClickable {
+    border-radius: 5px;
+    border: rgb(251 251 251 / 23%) 0.25px solid;
+}
+
+#IconHeader, #IconHeaderImg{
+    width: 32px;
+    height: 32px;
+}
+
 .itemClickable:hover {
     cursor: pointer;
-    border-radius: 5px;
     transition: box-shadow 0.2s;
     box-shadow: 2px 2px 12px 0px black;
 }
